# MiniSpice

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
controller/Core Controllers/: CircuitController.cpp  CircuitController.h  ResultController.cpp  ResultController.h  SimulationController.cpp  SimulationController.h
controller/Supporting Controllers/: IOController.cpp  IOController.h  SettingsController.cpp  SettingsController.h  UserSessionController.cpp  UserSessionController.h
model/Circuit Model/: CircuitModel.cpp  CircuitModel.h  Component.cpp  Component.h  Node.cpp  Node.h
model/Circuit Model/components/: Capacitor.cpp  Capacitor.h  CurrentSource.cpp  CurrentSource.h  Diode.cpp  Diode.h  Inductor.cpp  Inductor.h  Resistor.cpp  Resistor.h  VoltageSource.cpp  VoltageSource.h
model/Results/: Diagrom.cpp  Diagrom.h  SimulationResults.cpp  SimulationResults.h  qcustomplot.cpp
model/Solver/: DCSolverTest.cpp  DCSolverTest.h  DCSweep.cpp  DCSweep.h  NonlinearSolver.cpp  NonlinearSolver.h  Transient.cpp  Transient.h
model/Supporting Utilities/: NetlistParser.cpp  NetlistParser.h
view/: Get_Ecxeption.cpp  Get_Ecxeption.h
view/components/: CapacitorComponent.cpp  CapacitorComponent.h  GND.cpp  GND.h  GraphicComponent.cpp  GraphicComponent.h  InductorComponent.cpp  InductorComponent.h  ResistorComponent.cpp  ResistorComponent.h  VoltageComponent.cpp  VoltageComponent.h
view/grid/: Grid.cpp  Grid.h
view/ui/: CommandHandler.cpp  CommandHandler.h  ComponentPropertyDialog.cpp  ComponentPropertyDialog.h  ComponentView.cpp  ComponentView.h  MainWindow.cpp  MainWindow.h  NetListHandler.cpp  NetListHandler.h  SimulationDialog.cpp  SimulationDialog.h  ToolBar.cpp  ToolBar.h
view/wire/: WireComponent.cpp  WireComponent.h
